feat:restaurant info integration

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ PORT=1234
 # MONGOOSE_URI=mongodb+srv://zerin:350MgoPXflJfgkrt@cluster0.fcuy1z5.mongodb.net/?retryWrites=true&w=majority
 MONGOOSE_URI=mongodb+srv://KDS_user:123456a@kds.gkxu3vj.mongodb.net/
 ALL_TABLES=https://sak-skeleton-samiya-kazi.koyeb.app/pos/all-tables-all-restaurants
+RESTAURANT_URL=https://sak-skeleton-samiya-kazi.koyeb.app/marketplace/restaurant-details/
