--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.13.0",
     "date-fns": "^3.2.0",
+    "lottie-react": "^2.4.0",
     "mapbox-gl": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
